--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,21 @@
 Package: exsic
 Type: Package
-Title: Convenience functions for botanist to create exsiccatae indices
-Version: 1.0
-Date: 2013-02-12
-Author: Reinhard Simon (CIP), David M. Spooner (USDA)
+Title: Convenience Functions for Botanists to Create Specimens Indices
+Version: 1.1.1
+Date: 2014-10-01
+Authors@R: as.person(c(
+    "Reinhard Simon (CIP) <R.SIMON@CGIAR.ORG> [aut, cre]",
+    "David M. Spooner (USDA) [aut]",
+    "International Potato Center [cph]"))
 Maintainer: Reinhard Simon <R.SIMON@CGIAR.ORG>
-Description: The package provides some tools for botanists, plant
-        taxonomists, curators of plant genebanks and perhaps other
-        biological collections.
-License: GPL (>= 3)
-LazyData: yes
+Description: The package provides tools for botanists, plant taxonomists,
+    curators of plant genebanks and perhaps other biological collections.
+License: MIT + file LICENSE
 Depends: R (>= 2.15.1), stringr, markdown
-Collate: 'utils.R' 'exsic-new.R'
-Packaged: 2013-03-26 11:34:05 UTC; rsimon
+Packaged: 2014-10-01 16:19:36 UTC; rsimon
+Author: Reinhard Simon [aut, cre] (CIP),
+  David M. Spooner [aut] (USDA),
+  International Potato Center [cph]
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-03-26 17:37:57
+Date/Publication: 2014-10-01 18:44:48
